# langgraph-telegram-agent

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
k8s/: deployment.yaml  service.yaml
src/: config.py  logger_config.py  schemas.py
src/api/: main.py
src/core/: agent_manager.py  builder.py  prompts.py  tools.py
